--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <span>Contacto</span>
 
           <ion-icon name="chevron-down"></ion-icon>
         </button>
@@ -140,7 +140,7 @@
 
             <div class="contact-info">
               <p class="contact-title">Currículum</p>
-              <a href="https://www.linkedin.com/in/javier-nicol%C3%A1s-godoy-8427651b1/" class="social-link">Descargar PDF</a>
+              <a href="https://drive.google.com/file/d/1b8CecrFzOSe1HFY03AUwDH4zosrPpllC/view?usp=drive_link" class="social-link">Descargar PDF</a>
             </div>
          </li>
 
