Update personal description in index.html

--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
         </header>
 
         <section class="about-text">
-          </p>Profesional en formación como Tester QA y analista en sistemas con experiencia en proyectos ágiles. Me destaco por mi capacidad de comunicación, trabajo en equipo y pensamiento crítico para identificar y resolver problemas. 
-          <br>Cuento con conocimientos en lenguajes de programación como en Python y JavaScript.
+          </p>Estudiante de Análisis de Sistemas y QA Tester en formación, enfocado en la calidad de software bajo metodologías ágiles (Scrum). Mis fortalezas son el pensamiento crítico, la comunicación efectiva y el trabajo en equipo, complementadas con conocimientos en Python y JavaScript.
         </section>
 
 
