Update project details for Mercado Libre

--- a/index.html
+++ b/index.html
@@ -274,22 +274,22 @@
               </div>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="automation">
-              <a href="https://underc0de.org" target="_blank" rel="noopener noreferrer">
+            <li class="project-item  active" data-filter-item data-category="manual">
+              <a href="https://www.mercadolibre.com.ar/" target="_blank" rel="noopener noreferrer">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/banner.png" alt="finance" loading="lazy">
                 </figure>
               </a>
 
-              <h3 class="project-title">Underc0de</h3>
+              <h3 class="project-title">Mercado Libre</h3>
 
-              <p class="project-category">Automation</p>
+              <p class="project-category">Manual/Automation</p>
 
                 <div class="project-docs-wrapper">
-                  <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
+                  <a href="https://github.com/nicolasgodoy231/mercado-libre-qa-testing" target="_blank" rel="noopener noreferrer" class="project-docs-link">
                     <span>Documentación QA</span>
                   </a>
                 </div>
