--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
 
               <h3 class="project-title">Mercado Libre</h3>
 
-              <p class="project-category">Manual/Automation</p>
+              <p class="project-category">Manual (Manual/Mobile)</p>
 
                 <div class="project-docs-wrapper">
-                  <a href="https://github.com/nicolasgodoy231/mercado-libre-qa-testing" target="_blank" rel="noopener noreferrer" class="project-docs-link">
+                  <a href="https://github.com/nicolasgodoy231/mercado-libre-qa-testing/docs" target="_blank" rel="noopener noreferrer" class="project-docs-link">
                     <span>Documentación QA</span>
                   </a>
                 </div>
