--- a/index.html
+++ b/index.html
@@ -565,22 +565,23 @@
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">QA Tester</h4>
-              <span>NoCountry</span>
+              <span>No Country (Pasantía remota)</span>
 
               <span>Enero 2025 — Marzo 2025</span>
 
               <p class="timeline-text">
-                •	Diseño y ejecución de casos de prueba, reportes de defectos con sus pasos a reproducir, su severidad y prioridad.<br>
+                •	Diseño y ejecución de casos de prueba.<br>
+                •	Reporte de defectos detallados, incluyendo pasos para reproducir, severidad y prioridad.<br>
                 •	Creación de documentación de historias de usuario y criterios de aceptación.<br>
-                •	Participación activa en dailys.
+                •	Participación activa en reuniones diarias (dailys), colaborando de forma efectiva con el equipo en el flujo de trabajo Scrum.<br>
+                <img src="assets\images\Diploma No Country.jpeg" alt="Diploma-NoCountry" style="max-width: 100px; height: auto;">
               </p>
-
             </li>
 
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">QA Tester</h4>
-              <span>Proyecto Nahual</span>
+              <span>Proyecto Nahual (Presencial)</span>
               <span>Julio 2023 — Octubre 2023</span>
 
               <p class="timeline-text">
