Revise defect reporting and add diploma link
Updated defect reporting details and added links to diploma image.

--- a/index.html
+++ b/index.html
@@ -571,10 +571,11 @@
 
               <p class="timeline-text">
                 •	Diseño y ejecución de casos de prueba.<br>
-                •	Reporte de defectos detallados, incluyendo pasos para reproducir, severidad y prioridad.<br>
+                • Identificación y reporte de defectos con su asignación de severidad y prioridad, con sus pasos para reproducir. .<br>
                 •	Creación de documentación de historias de usuario y criterios de aceptación.<br>
                 •	Participación activa en reuniones diarias (dailys), colaborando de forma efectiva con el equipo en el flujo de trabajo Scrum.<br>
-                <img src="assets\images\Diploma No Country.jpeg" alt="Diploma-NoCountry" style="max-width: 100px; height: auto;">
+                <a href="https://drive.google.com/file/d/1CPS62CNn6pUqGOK-cVS8A24Rm63bBQLJ/view?usp=drive_link" target="_blank">
+                  <img src="assets\images\Diploma No Country.jpeg" alt="Diploma-NoCountry" style="max-width: 100px; height: auto;"><br>
               </p>
             </li>
 
@@ -585,9 +586,10 @@
               <span>Julio 2023 — Octubre 2023</span>
 
               <p class="timeline-text">
-                •	Identificación y reporte de errores funcionales.<br>
-                •	Diseño y ejecución de casos de prueba con documentación de resultados.
-
+                •	Diseño y ejecución de casos de pruebas.<br>
+                •	Ejecución de pruebas funcionales, exploratorias y de regresión.<br>
+                • Identificación y reporte de defectos con su asignación de severidad y prioridad, con sus pasos para reproducir.                
+                                
               </p>
 
             </li>
