Update project titles and categories to 'Próximamente'

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">Orizon</h3>
-              <p class="project-category">Web development</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category">Próximamente</p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -327,8 +327,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">Fundo</h3>
-              <p class="project-category">Web design</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category"> *** </p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -348,8 +348,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">Brawlhalla</h3>
-              <p class="project-category">Applications</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category"> *** </p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -369,8 +369,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">DSM.</h3>
-              <p class="project-category">Web design</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category"> *** </p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -390,8 +390,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">MetaSpark</h3>
-              <p class="project-category">Web design</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category">Próximamente</p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -411,8 +411,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">Summary</h3>
-              <p class="project-category">Web development</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category">Próximamente</p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -432,8 +432,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">Task Manager</h3>
-              <p class="project-category">Applications</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category">Próximamente</p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -453,8 +453,8 @@
                 </figure>
               </a>
 
-              <h3 class="project-title">Arrival</h3>
-              <p class="project-category">Web development</p>
+              <h3 class="project-title">Próximamente</h3>
+              <p class="project-category">Próximamente</p>
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
@@ -574,7 +574,7 @@
                 • Identificación y reporte de defectos con su asignación de severidad y prioridad, con sus pasos para reproducir. .<br>
                 •	Creación de documentación de historias de usuario y criterios de aceptación.<br>
                 •	Participación activa en reuniones diarias (dailys), colaborando de forma efectiva con el equipo en el flujo de trabajo Scrum.<br>
-                <a href="https://drive.google.com/file/d/1CPS62CNn6pUqGOK-cVS8A24Rm63bBQLJ/view?usp=drive_link" target="_blank">
+                <a href="https://media.licdn.com/dms/image/v2/D4D2DAQGsje7WvlMh6g/profile-treasury-image-shrink_1280_1280/B4DZXoMm30HIAc-/0/1743357375824?e=1766545200&v=beta&t=Qfpv2SaIMPgSJl4-5jgppQMq4727-H2560fp1npYHmc" target="_blank">
                   <img src="assets\images\Diploma No Country.jpeg" alt="Diploma-NoCountry" style="max-width: 100px; height: auto;"><br>
               </p>
             </li>
