Change 'Documentación QA' to 'Test Plan y Evidencia'

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
               <div class="project-docs-wrapper">
                 <a href="https://github.com/nicolasgodoy231/Portfolio-QA-Javier-Nicolas-Godoy/tree/main/barbelink" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                  <span>Documentación QA</span>
+                  <span>Test Plan y Evidencia</span>
                 </a>
               </div>
             </li>
@@ -289,8 +289,8 @@
               <p class="project-category">Manual (Manual/Mobile)</p>
 
                 <div class="project-docs-wrapper">
-                  <a href="https://github.com/nicolasgodoy231/mercado-libre-qa-testing/tree/main/docs" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                  <a href="https://github.com/nicolasgodoy231/mercado-libre-qa-testing.git" target="_blank" rel="noopener noreferrer" class="project-docs-link">
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -311,7 +311,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -332,7 +332,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -353,7 +353,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -374,7 +374,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -395,7 +395,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -416,7 +416,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -437,7 +437,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
@@ -458,7 +458,7 @@
 
                 <div class="project-docs-wrapper">
                   <a href="#" target="_blank" rel="noopener noreferrer" class="project-docs-link">
-                    <span>Documentación QA</span>
+                    <span>Test Plan y Evidencia</span>
                   </a>
                 </div>
 
