--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
               <p class="timeline-text">
                 Centro Multidiciplinario de Capacitación para el Trabajo
                 <a href="https://drive.google.com/file/d/1CPS62CNn6pUqGOK-cVS8A24Rm63bBQLJ/view?usp=drive_link" target="_blank">
-                  <img src="assets\images\ingles.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;">
+                  <img src="assets\images\Ingles.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;">
                 </a>
               </p>
 
