--- a/index.html
+++ b/index.html
@@ -512,6 +512,9 @@
 
               <p class="timeline-text">
                 Talento Tech
+                  <a href="https://drive.google.com/file/d/1YbV7BO3Xe8OiX-9eOLue2crEbESSD0yo/view?usp=sharing" target="_blank">
+                    <img src="assets\images\Automatizacióntesting.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;">
+                 </a>
               </p>
 
             </li>
