Add line breaks after images in timeline section

--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
 
               <p class="timeline-text">
                 Instituto de Formación Técnica Superior N°11
+                <br><br>
               </p>
 
             </li>
@@ -513,7 +514,7 @@
               <p class="timeline-text">
                 Talento Tech
                   <a href="https://drive.google.com/file/d/1YbV7BO3Xe8OiX-9eOLue2crEbESSD0yo/view?usp=sharing" target="_blank">
-                    <img src="assets\images\Automatizacióntesting.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;">
+                    <img src="assets\images\Automatizacióntesting.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;"><br>
                  </a>
               </p>
 
@@ -528,7 +529,7 @@
               <p class="timeline-text">
                 Proyecto Nahual
                   <a href="https://drive.google.com/file/d/1E5xOXSf7sDe_t3QMK__VaTUyN7Nl9TM5/view?usp=drive_link" target="_blank">
-                    <img src="assets\images\Proyecto_Nahual_-_Curso_de_Testing_de_Software_-_2023-07-01_SIN FONDO.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;">
+                    <img src="assets\images\Proyecto_Nahual_-_Curso_de_Testing_de_Software_-_2023-07-01_SIN FONDO.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;"><br>
                  </a>
               </p>
 
@@ -543,7 +544,7 @@
               <p class="timeline-text">
                 Centro Multidiciplinario de Capacitación para el Trabajo
                 <a href="https://drive.google.com/file/d/1CPS62CNn6pUqGOK-cVS8A24Rm63bBQLJ/view?usp=drive_link" target="_blank">
-                  <img src="assets\images\Ingles.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;">
+                  <img src="assets\images\Ingles.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;"><br><br>
                 </a>
               </p>
 
