Fix image tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
               <p class="timeline-text">
                 Centro Multidiciplinario de Capacitación para el Trabajo
                 <a href="https://drive.google.com/file/d/1CPS62CNn6pUqGOK-cVS8A24Rm63bBQLJ/view?usp=drive_link" target="_blank">
-                  <img src="assets\images\Ingles.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;"><br><br>
+                  <img src="assets\images\Ingles.png" alt="Vista previa del PDF" style="max-width: 100px; height: auto;"><br>
                 </a>
               </p>
 
