Update link to diploma image source

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                 • Identificación y reporte de defectos con su asignación de severidad y prioridad, con sus pasos para reproducir. .<br>
                 •	Creación de documentación de historias de usuario y criterios de aceptación.<br>
                 •	Participación activa en reuniones diarias (dailys), colaborando de forma efectiva con el equipo en el flujo de trabajo Scrum.<br>
-                <a href="https://media.licdn.com/dms/image/v2/D4D2DAQGsje7WvlMh6g/profile-treasury-image-shrink_1280_1280/B4DZXoMm30HIAc-/0/1743357375824?e=1766545200&v=beta&t=Qfpv2SaIMPgSJl4-5jgppQMq4727-H2560fp1npYHmc" target="_blank">
+                <a href="https://drive.google.com/file/d/1rQKtBFVJhC4iPL-CAyUBhAfj-c7i3BEA/view?usp=drive_link" target="_blank">
                   <img src="assets\images\Diploma No Country.jpeg" alt="Diploma-NoCountry" style="max-width: 100px; height: auto;"><br>
               </p>
             </li>
